--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "extends": "@workspace/typescript-config/react-library.json",
   "compilerOptions": {
-    "baseUrl": ".",
+    "ignoreDeprecations": "6.0",
     "paths": {
       "@workspace/ui/*": ["./src/*"]
-    }
+    },
   },
   "include": ["."],
   "exclude": ["node_modules", "dist"]
