--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "build": "turbo build",
+    "build:web": "turbo build --filter=web",
+    "build:dashboard": "turbo build --filter=dashboard",
     "dev": "turbo dev",
     "dev:web": "turbo dev --filter=web",
     "dev:dashboard": "turbo dev --filter=dashboard",
